--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="js/angular-cookies.min.js"></script>
 
 	<script type="text/javascript" src="js/module.js"></script>
-	<script type="text/javascript" src="js/controllers.js"></script>
+	<!--<script type="text/javascript" src="js/controllers.js"></script>-->
 </head>
 <body>
 	<div class="container" ng-view=""></div>
