--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,5 @@
 <div ng-controller="homeCtrl">
+	<p>Scope: {{ token }}</p>
   <div class="col-md-12 col-sm-12">
     <h1>Welcome to Mahindra Idol 5</h1>
   </div>
