--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
 	<div class="col-md-12 col-sm-12">
 		<h1>Welcome to Mahindra Idol 5</h1>
 	</div>
-
+	<p>Scope: {{ token }}</p>
 	<div class="col-sm-12">
 		<form role="form">
 			<div class="form-group">
