--- a/pages/home.html
+++ b/pages/home.html
@@ -2,6 +2,7 @@
 	<p>Scope: {{ token }}</p>
   <div class="col-md-12 col-sm-12">
     <h1>Welcome to Mahindra Idol 5</h1>
+		<pre>{{ user }}</pre>
   </div>
 
 	<a href="#/login">Login</a>
