--- a/pages/login.html
+++ b/pages/login.html
@@ -16,6 +16,9 @@
 			</div>
 			<button type="submit" class="btn btn-default" ng-click="doLogin(form)">Submit</button>
 		</form>
+		<pre>
+			{{ user }}
+		</pre>
 	</div>
 
 	<a href="#/home">Home</a>
