Working on getting the nodes.

--- a/pages/home.html
+++ b/pages/home.html
@@ -2,8 +2,9 @@
 	<p>Scope: {{ token }}</p>
   <div class="col-md-12 col-sm-12">
     <h1>Welcome to Mahindra Idol 5</h1>
-		<pre>{{ user }}</pre>
   </div>
+
+	<button ng-click="getNode()">Node</button>
 
 	<a href="#/login">Login</a>
 </div>
