--- a/pages/login.html
+++ b/pages/login.html
@@ -6,13 +6,13 @@
 		<form role="form">
 			<div class="form-group">
 				<label for="exampleInputEmail1">Email address</label>
-				<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter email" ng-model="form.username">
+				<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter email" ng-model="username">
 			</div>
 			<div class="form-group">
 				<label for="exampleInputPassword1">Password</label>
-				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" ng-model="form.pass">
+				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" ng-model="pass">
 			</div>
-			<button type="submit" class="btn btn-default" ng-click="doLogin(form)">Submit</button>
+			<button type="submit" class="btn btn-default" ng-click="doLogin(username, pass)">Submit</button>
 		</form>
 	</div>
 </div>
