Documentation for the code and also the README file

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,6 @@
 <div ng-controller="homeCtrl">
   <div class="col-md-12 col-sm-12">
-    <h1>Welcome to Mahindra Idol 5</h1>
-		<button ng-click="getNodes()">Node</button>
+    <h1>Welcome to FL360 mobile app</h1>
 		<a href="#/login">Login</a>
   </div>
 
