--- a/pages/login.html
+++ b/pages/login.html
@@ -1,18 +1,27 @@
 <div ng-controller="loginCtrl">
-	<div class="col-md-12 col-sm-12">
-		<h1>Welcome to Mahindra Idol 5</h1>
-	</div>
-	<div class="col-sm-12">
-		<form role="form">
-			<div class="form-group">
-				<label for="exampleInputEmail1">Email address</label>
-				<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter email" ng-model="username">
-			</div>
-			<div class="form-group">
-				<label for="exampleInputPassword1">Password</label>
-				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" ng-model="pass">
-			</div>
-			<button type="submit" class="btn btn-default" ng-click="doLogin(username, pass)">Submit</button>
-		</form>
-	</div>
+	<div class="row">
+    <div class="col-md-12 col-sm-12">
+      <h1>Welcome to FL360</h1>
+    </div>
+  </div>
+  
+	<div class="row">
+    <div class="col-md-10 col-sm-10 col-xs-10">
+      <form role="form">
+        <div class="form-group">
+          <input type="text" class="form-control" id="exampleInputEmail1" 
+            placeholder="Enter your username" ng-model="username">
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" id="exampleInputPassword1" 
+            placeholder="Enter your password" ng-model="pass">
+        </div>
+        <button type="submit" class="btn btn-default" ng-click="doLogin(username, pass)">Submit</button>
+      </form>
+    </div>
+    <div class="col-md-2 col-sm-2 col-xs-2">
+      Go
+    </div>
+  </div>
+  
 </div>
