--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 	<script type="text/javascript" src="js/module.js"></script>
 	<script type="text/javascript" src="js/controllers.js"></script>
+	<script type="text/javascript" src="js/directives.js"></script>
 </head>
 <body>
 	<div class="container" ng-view=""></div>
