--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
   </div>
 
 	<div class="col-md-12 col-sm-12">
-		<div ng-repeat="node in nodes" ng-click="mouseClick(node.nid)">
+		<div ng-repeat="node in nodes" ng-click="showNode(node.nid)">
 			<h1>{{ node.title }}</h1>
 			<p>A {{ node.type }} by {{ node.name }}</p>
 		</div>
