Started working on the app using the FL360 installation now. Will be working on fetching content properly, then look at local DB and then other functionalities.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Login to the application</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="css/custom-style.css">
 
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
