--- a/pages/home.html
+++ b/pages/home.html
@@ -5,9 +5,10 @@
   </div>
 
 	<div class="col-md-12 col-sm-12">
-		<div ng-repeat="node in finalNodes" ng-click="showNode(node.nid)">
-			<h1>{{ node.title }}</h1>
-			<p>A {{ node.type }} by {{ node.name }}</p>
+		<div ng-repeat="node in finalNodes" ng-click="showNode(node.nid)" class="node teaser">
+			<h1 class="title node-title">{{ node.title }}</h1>
+			<p class="metag-tag">By {{ node.name }}</p>
+      <p ng-bind-html-unsafe="node.body.und[0].safe_summary"></p>
 		</div>
 	</div>
 </div>
