--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Login to the application</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="css/custom-style.css">
 
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -12,6 +13,7 @@
 
 	<script type="text/javascript" src="js/module.js"></script>
 	<script type="text/javascript" src="js/controllers.js"></script>
+	<script type="text/javascript" src="js/directives.js"></script>
 </head>
 <body>
 	<div class="container" ng-view=""></div>
