Need to change the cookie functionality for Phone

--- a/pages/home.html
+++ b/pages/home.html
@@ -5,10 +5,26 @@
   </div>
 
 	<div class="col-md-12 col-sm-12">
-		<div ng-repeat="node in finalNodes" ng-click="showNode(node.nid)" class="node teaser">
+		<!-- <div ng-repeat="node in finalNodes" ng-click="showNode(node.nid)" class="node teaser">
 			<h1 class="title node-title">{{ node.title }}</h1>
 			<p class="metag-tag">By {{ node.name }}</p>
       <p ng-bind-html-unsafe="node.body.und[0].safe_summary"></p>
-		</div>
+		</div> -->
+
+    <div class="node" ng-repeat="node in finalNodes" ng-click="showNode(node.nid)">
+      <div class="node-wrap">
+        <div class="title">
+          <h1 class="title">{{ node.title }}</h1>
+        </div>
+        <div class="teaser">
+          <p ng-bind-html-unsafe="node.body.und[0].safe_summary"></p>
+        </div>
+      </div>
+
+      <div class="meta-container clearfix">
+        <div class="time">By {{ node.name }}</div> 
+        <div class="profile_pic"><img src="../images/profile_pic.jpg" alt="#" width="72" height="72" /></div>
+      </div>
+    </div>
 	</div>
 </div>
