--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/angular.min.js"></script>
-	<script type="text/javascript" src="js/angular-cookies.min.js"></script>
+	<script type="text/javascript" src="js/angular-local-storage.min.js"></script>
 
 	<script type="text/javascript" src="js/module.js"></script>
 	<script type="text/javascript" src="js/controllers.js"></script>
