--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,25 @@
 <div ng-controller="homeCtrl">
   <div class="col-md-12 col-sm-12">
-    <h1>Welcome to FL360 mobile app</h1>
-		<a href="#/login">Login</a>
+    <nav class="navbar navbar-default" role="navigation">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#/home">Angular PG</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav">
+          <li class="noemal"><a href="#/home">Home</a></li>
+          <li><a href="#/login">Login</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </nav>
   </div>
 
 	<div class="col-md-12 col-sm-12">
