--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
 	<div id="global-wrapper" ng-controller="globalCtrl">
 		<div class="container" ng-view=""></div>
 	</div>
+
+	<script type="text/javascript" src="js/tinymce/tinymce.min.js"></script>
+	<script type="text/javascript" src="js/tinymce/angular-tinymce.js"></script>
 </body>
 </html>
