--- a/pages/create.html
+++ b/pages/create.html
@@ -5,16 +5,24 @@
     <h1 class="page-title">Create a new article</h1>
     
     <form role="form" class="bs-example">
+      <label>Title of the discussion</label>
       <div class="form-group">
         <input type="text" ng-model="node.title" class="form-control" placeholder="Enter the title of the article">
       </div>
 
+      <label>Term selection</label>
       <div class="form-group">
-        <textarea name="body" class="form-control" cols="30" rows="10" ng-model="node.body"></textarea>
+        <termselection ng-model="node.term"></termselection>
+      </div>
+
+      <label>The discussion body</label>
+      <div class="form-group">
+        <textarea name="body" class="form-control" cols="30" rows="10" ng-model="node.body" ui-tinymce></textarea>
       </div>
 
       <button type="submit" class="btn btn-default" ng-click="saveNode(node)">Submit</button>
     </form>
     {{node}}
+    {{  }}
   </div>
 </div>
