--- a/pages/create.html
+++ b/pages/create.html
@@ -20,9 +20,12 @@
         <textarea name="body" class="form-control" cols="30" rows="10" ng-model="node.body" ui-tinymce></textarea>
       </div>
 
-      <button type="submit" class="btn btn-default" ng-click="saveNode(node)">Submit</button>
+      <button type="submit" class="btn btn-primary" ng-click="saveNode(node)">Submit</button>
+      <button type="submit" class="btn btn-primary" ng-click="goBackHome()">Home</button>
     </form>
-    {{node}}
-    {{  }}
   </div>
 </div>
+
+<modalpopup popuptitle="This is my modal"
+            bodymessage="The node has been saved."
+            savebutton="true"></modalpopup>
