--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<script type="text/javascript" src="js/module.js"></script>
 	<script type="text/javascript" src="js/controllers.js"></script>
 	<script type="text/javascript" src="js/directives.js"></script>
+
+  <script type="text/javascript" src="js/helpers.js"></script>
 </head>
 <body>
 	<div id="global-wrapper" ng-controller="globalCtrl">
