Changed in the theme of the home page, individual node page and also the comment section.
The layout is also changed to fluid.

--- a/pages/fullnode.html
+++ b/pages/fullnode.html
@@ -1,7 +1,9 @@
 <div class="full-node-wrapper" id="full-node-wrapper" ng-controller="fullNodeCtrl">
   <ng-include src="globalNavigationURL"></ng-include>
   <div class="col-md-12 col-sm-12">
-    <node number="nid"></node>
-    <a href="#/home" class="btn btn-info">Go back</a>
+		<div class="main-content-wrapper">
+			<node number="nid"></node>
+			<a href="#/home" class="btn btn-info">Go back</a>
+		</div>
   </div>
 </div>
