--- a/pages/home.html
+++ b/pages/home.html
@@ -4,11 +4,13 @@
 
 	<div class="col-md-12 col-sm-12">
 		
-    <div class="node teaser" ng-repeat="node in finalNodes" ng-click="showNode(node.nid)">
-      
-      <teaser object="node"></teaser>
+		<div class="main-content-wrapper">
+			<div class="node teaser" ng-repeat="node in finalNodes" ng-click="showNode(node.nid)">
+				
+				<teaser object="node"></teaser>
 
-    </div>
-
+			</div>		
+		</div>
+		
 	</div>
 </div>
