--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="css/custom-style.css">
+	<link rel="stylesheet" href="css/theme.css">
 
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -19,7 +20,7 @@
 </head>
 <body>
 	<div id="global-wrapper" ng-controller="globalCtrl">
-		<div class="container" ng-view=""></div>
+		<div class="row-fluid" ng-view=""></div>
 	</div>
 
 	<script type="text/javascript" src="js/tinymce/tinymce.min.js"></script>
