--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html ng-app="mi">
 <head>
 	<title>Login to the application</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="css/custom-style.css">
